z-index fix

--- a/src/app/chat.panel/chat.panel.component.css
+++ b/src/app/chat.panel/chat.panel.component.css
@@ -1,8 +1,8 @@
 .wrapper {
   height: 100%;
-  flex-direction:column;
+  flex-direction: column;
   background-color: #F1F1F1;
-  overflow:auto;
+  overflow: auto;
   justify-content: center;
   position: relative;
   display: flex;
@@ -18,30 +18,28 @@
   display: flex;
 }
 
-.rightpanel-burger-menu:focus{
-outline: none;
+.rightpanel-burger-menu:focus {
+  outline: none;
 }
 
 .rightpanel-burger-menu.active {
-transition: 0.2s;
-background: rgba(0,0,0,.1);
+  transition: 0.2s;
+  background: rgba(0, 0, 0, .1);
 }
 
-
-
 .senden-container {
-    width: 100%;
-    padding: 15px 0;
-    background: var(--white-grey);
-    display: grid;
-    grid-template-rows: auto 1fr;
-    grid-template-columns: auto;
+  width: 100%;
+  padding: 15px 0;
+  background: var(--white-grey);
+  display: grid;
+  grid-template-rows: auto 1fr;
+  grid-template-columns: auto;
 }
 
 .emoji-container {
   grid-row: 1 / 2;
   grid-column: 1 / 2;
-  display:flex;
+  display: flex;
   flex-wrap: wrap;
   overflow-y: scroll;
   height: 0px;
@@ -58,28 +56,28 @@ background: rgba(0,0,0,.1);
   padding: 0 15px;
 }
 
-.emoji-controller > div {
+.emoji-controller>div {
   transition: 0.3s;
   overflow: hidden;
   margin: 0;
   align-self: center;
 }
 
-.emoji-controller > div:nth-child(1), .emoji-controller > div:nth-child(3), .emoji-controller > div:nth-child(4) {
+.emoji-controller>div:nth-child(1), .emoji-controller>div:nth-child(3), .emoji-controller>div:nth-child(4) {
   width: 0;
   opacity: 0;
 }
-.emoji-controller > div:nth-child(2) {
+
+.emoji-controller>div:nth-child(2) {
   width: 26px;
   margin: 0 8px;
 }
 
-.bottom-container.open .emoji-controller > div:nth-child(1), .bottom-container.open .emoji-controller > div:nth-child(3), .bottom-container.open .emoji-controller > div:nth-child(4) {
+.bottom-container.open .emoji-controller>div:nth-child(1), .bottom-container.open .emoji-controller>div:nth-child(3), .bottom-container.open .emoji-controller>div:nth-child(4) {
   width: 26px;
   opacity: 1;
   margin: 0 8px;
 }
-
 
 .bottom-container {
   grid-row: 2 / 3;
@@ -99,6 +97,7 @@ background: rgba(0,0,0,.1);
   max-height: 76px;
   overflow: auto;
   padding: 0 10px 0 0;
+  min-height: 20px;
 }
 
 .chatmessage-container {
@@ -114,7 +113,7 @@ background: rgba(0,0,0,.1);
 }
 
 .open .chatmessage-container {
-margin: 10px 0 0 0;
+  margin: 10px 0 0 0;
 }
 
 .senden-container #input-chat-messages:focus {
@@ -127,14 +126,13 @@ margin: 10px 0 0 0;
   opacity: 0.5;
 }
 
-
-.chat-panel-left-container{
+.chat-panel-left-container {
   margin-left: 10px;
   float: left;
 }
 
-.chat-name-container{
-  display:flex;
+.chat-name-container {
+  display: flex;
   height: 100%;
 }
 
@@ -143,24 +141,25 @@ margin: 10px 0 0 0;
 }
 
 .chat-img {
-  width:40px;
+  width: 40px;
   border-radius: 25px;
   cursor: pointer;
 }
 
 .chat-name-member {
-  display:flex;
+  display: flex;
   flex-direction: column;
   padding: 8px;
 }
 
 .chat-name-member-two {
-  display:flex;
+  display: flex;
   flex-direction: column;
   padding: 8px;
   justify-content: center;
 }
-.chat-name{
+
+.chat-name {
   color: var(--medium-black);
 }
 
@@ -173,62 +172,57 @@ margin: 10px 0 0 0;
 }
 
 .chat-panel-right-container {
-  display:flex;
-  align-items:center;
+  display: flex;
+  align-items: center;
   float: right;
   height: 100%;
 }
 
 .menu-img {
-    height: 23px;
-    opacity: 0.5;
-    cursor: pointer;
-    align-self: center;
+  height: 23px;
+  opacity: 0.5;
+  cursor: pointer;
+  align-self: center;
 }
 
-
-
-
 .room-menu {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    top: 50px;
-    right: 25px;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,.26), 0 2px 10px 0 rgba(0,0,0,.16);
-    border-radius: 3px;
-    background-color: white;
-    z-index: 1;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 50px;
+  right: 25px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .26), 0 2px 10px 0 rgba(0, 0, 0, .16);
+  border-radius: 3px;
+  background-color: white;
+  z-index: 1;
 }
 
 .sub-room-menu {
-    background-color: white;
-    color: #444;
-    padding-left: 24px;
-    padding-right: 23px;
-    padding-top: 13px;
+  background-color: white;
+  color: #444;
+  padding-left: 24px;
+  padding-right: 23px;
+  padding-top: 13px;
 }
 
 .room-row {
-    width: 200px;
-    height: 40px;
-    cursor:pointer;
+  width: 200px;
+  height: 40px;
+  cursor: pointer;
 }
 
 .room-row:hover {
-    background-color: rgb(235, 235, 235);
+  background-color: rgb(235, 235, 235);
 }
-
 
 /* SearchBar */
 
 .menu-item-container {
-    display: grid;
-    grid-template-columns: auto 25px;
-    width: 100%;
-    height: 100%;
+  display: grid;
+  grid-template-columns: auto 25px;
+  width: 100%;
+  height: 100%;
 }
-
 
 .search-input-container {
   display: flex;
@@ -276,7 +270,6 @@ margin: 10px 0 0 0;
 .searchOpen .magnifier-img {
   opacity: 0;
   transform: rotate(90deg);
-
 }
 
 .searchOpen .close-img {
@@ -293,21 +286,19 @@ margin: 10px 0 0 0;
   display: none;
   height: 100%;
   opacity: 0;
-  background-color: rgba(0,0,0,0);
+  background-color: rgba(0, 0, 0, 0);
 }
-
 
 .searchOpen .search-input-container input {
   opacity: 1;
   display: inherit;
 }
 
-
-.search-input-container input:focus{
+.search-input-container input:focus {
   outline: none;
-  }
+}
 
-.menu-item-container .search-input-container > div {
+.menu-item-container .search-input-container>div {
   align-self: center;
 }
 
@@ -315,7 +306,6 @@ margin: 10px 0 0 0;
   margin: 0;
   color: var(--medium-grey);
 }
-
 
 .menu-item-container .search-input-container div {
   width: 0px;
@@ -329,7 +319,7 @@ margin: 10px 0 0 0;
   height: 100%;
 }
 
-.searchOpen .search-input-container > div {
+.searchOpen .search-input-container>div {
   width: 20px;
   opacity: 1;
   margin: 0 5px;
@@ -350,17 +340,15 @@ margin: 10px 0 0 0;
 
 .chat-panel-header.searchOpen {
   background-color: #fff;
-  box-shadow: 0 2px 3px rgba(0,0,0,0.07);
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.07);
   position: relative;
 }
-
 
 .searchOpen .chat-panel-left-container {
   opacity: 0;
   position: absolute;
   z-index: -100;
 }
-
 
 .wrapper.chat {
   display: grid;
@@ -372,7 +360,7 @@ margin: 10px 0 0 0;
 .chat-panel-header {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
-  z-index: 2;
+  z-index: 35;
   width: 100%;
   min-height: 65px;
   height: 65px;
@@ -387,14 +375,15 @@ margin: 10px 0 0 0;
   z-index: 1;
   padding: 0 0 0 15px;
 }
+
 .senden-container {
   grid-column: 1 / 2;
   grid-row: 3 / 4;
   z-index: 1;
 }
 
-.overlay-comp-container{
-  width:0px;
+.overlay-comp-container {
+  width: 0px;
   grid-row: 1 / 4;
   grid-column: 2 / 4;
   z-index: 2;
@@ -408,10 +397,10 @@ margin: 10px 0 0 0;
 
 @keyframes animFromRight {
   0% {
-    width:0px;
+    width: 0px;
   }
   100% {
-    width:400px;
+    width: 400px;
   }
 }
 
@@ -421,17 +410,15 @@ margin: 10px 0 0 0;
 
 @keyframes animFromLeft {
   0% {
-    width:400px;
+    width: 400px;
   }
   100% {
-    width:0px;
+    width: 0px;
   }
 }
 
-
-
 .wrapper.home:after {
-  background:none;
+  background: none;
 }
 
 .wrapper:after {
@@ -446,15 +433,15 @@ margin: 10px 0 0 0;
   z-index: 0;
 }
 
-.wrapper.home h1{
+.wrapper.home h1 {
   text-align: center;
   font-weight: 100;
 }
 
 .date-container {
-  position:absolute;
-  z-index: 1000;
-  width:100%;
+  position: absolute;
+  z-index: 25;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -463,12 +450,11 @@ margin: 10px 0 0 0;
 }
 
 .date {
-  box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.3);
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.3);
   background-color: #e1f5feeb;
   padding: 5px 9px;
-  border-radius:5px;
+  border-radius: 5px;
 }
-
 
 .anim-date-in {
   animation: animationDateIn 0.35s ease-out forwards;
